@@ -1,4 +1,8 @@
-show {extract /^(\S+)/ as interfaces}
-{loop interfaces as interface}
-  show $interface
+ls -1 {extract /^(\S+)/ as filenames}
+ls -1 {extract /^(\S+)/ as filenames2}
+{loop filenames,
+      filenames2
+   as filename,
+      filename2}
+  ls -l $filename
 {end}
